deixando bonito e adicionando cores

--- a/fluxos de tela.html
+++ b/fluxos de tela.html
@@ -18,11 +18,11 @@
         <body>
             <header>
                 <ul class = barbeiro>
-                    <li><img src="icones/barbeiro.png"alt="figmes" height="60" width="75"></li>
+                    <li><img src="icones/barbeiro.png"alt="figmes" height="60" width="70"></li>
                     <h1>
                         BarbApp
                     </h1>
-                    <li><img src="icones/barbeiro.png"alt="figmes" height="60" width="75"></li>
+                    <li><img src="icones/barbeiro.png"alt="figmes" height="60" width="70"></li>
                 </ul>
             </header>
             <nav>
@@ -30,10 +30,8 @@
                     <li class="border-vermelho">
                         <a href="tela_agenda.html">
                             <ul class="linha">
-                                <li class="agenda"><img src="icones/icone agenda 1.png"></li>
-                                <ul class="black">
-                                    <li>Agenda</li>
-                                </ul>
+                                <li class="agenda"><img src="icones/agendamento.png"alt="figmes" height="60" width="60"></li>
+                                <li>Agenda</li>
                             </ul>
                         </a>
                     </li>
@@ -41,21 +39,16 @@
                     <li class="border-azul">
                         <a href="tela_relações.html">
                             <ul class="linha">
-                                <li class="agenda"><img src="icones/icone relacoes 1.png"></li>
-                                <ul class="black">
-                                    <li>Relações</li>
-                                </ul>
+                                <li class="agenda"><img src="icones/mesa.png"alt="figmes" height="60" width="60"></li>
+                                <li>Relações</li>
                             </ul>
                         </a>
                     </li>
                     <li class="border-branco">
                         <a href="tela_planodefidelidade.html">
                             <ul class="linha">
-                                <li class="agenda"><img src="icones/icone fidelidade 1.png"></li>
-                                
-                                <ul class="black">
-                                    <li>Plano de Fidelidade</li>
-                                </ul>
+                                <li class="agenda"><img src="icones/cartao-de-fidelidade.png"alt="figmes" height="60" width="60"></li> 
+                                <li>Plano de Fidelidade</li>
                             </ul>
                         </a>
                     </li>
