--- a/tela_agenda.html
+++ b/tela_agenda.html
@@ -20,7 +20,7 @@
                     Agenda
                 </h1>
                 <a class="voltar" href="fluxos de tela.html">
-                    <img src="icones/icone voltar 7.png">
+                    <img src="icones/seta.png"alt="figmes" height="60" width="60">
                 </a>
             </header>
             <main>
