--- a/tela_alice.html
+++ b/tela_alice.html
@@ -20,7 +20,7 @@
                     Feedback para a Alice
                 </h1>
                 <a class="voltar" href="tela_darfeedback.html">
-                    <img src="icones/icone voltar 7.png">
+                    <img src="icones/seta.png"alt="figmes" height="45" width="45">
                 </a>
             </header>
             <main>
