--- a/tela_meusplanos.html
+++ b/tela_meusplanos.html
@@ -20,12 +20,12 @@
                     Meus Planos
                 </h1>
                 <a class="voltar" href="tela_planodefidelidade.html">
-                    <img src="icones/icone voltar 7.png">
+                    <img src="icones/seta.png"alt="figmes" height="45" width="45">
                 </a>
             </header>
             <main>
                 <ul class="block">
-                    <li class="border-azul">
+                    <li class="border-vermelho">
                         <a href="tela_planodecortes.html">
                         Plano de Cortes
                         </a>
