--- a/tela_relações.html
+++ b/tela_relações.html
@@ -20,15 +20,15 @@
                     Relações
                 </h1>
                 <a class="voltar" href="fluxos de tela.html">
-                    <img src="icones/icone voltar 7.png">
+                    <img src="icones/seta.png"alt="figmes" height="45" width="45">
                 </a>
             </header>
             <main>
                 <ul class = "block">
-                    <li class="border-azul">
+                    <li class="border-vermelho">
                         <a href="tela_darfeedback.html">Dar Feedback</a>
                     </li>
-                    <li class="border-vermelho">
+                    <li class="border-branco">
                         <a href="tela_meusfeedbacks.html">Meus Feedbacks</a>
                     </li>
                 </ul>
