--- a/tela_Luciana.html
+++ b/tela_Luciana.html
@@ -20,7 +20,7 @@
                     Manicure Luciana
                 </h1>
                 <a class="voltar" href="tela_hoje.html">
-                    <img src="icones/icone voltar 7.png">
+                    <img src="icones/seta.png"alt="figmes" height="45" width="45">
                 </a>
             </header>
             <main>
