--- a/tela_acompanharplano.html
+++ b/tela_acompanharplano.html
@@ -21,7 +21,7 @@
                     Acompanhar o andamento dos meus clientes
                 </h1>
                 <a class="voltar" href="tela_planodecortes.html">
-                    <img src="icones/icone voltar 7.png">
+                    <img src="icones/seta.png"alt="figmes" height="45" width="45">
                 </a>
             </header>
             <main>
