--- a/tela_hoje.html
+++ b/tela_hoje.html
@@ -20,7 +20,7 @@
                     Hoje
                 </h1>
                 <a class="voltar" href="tela_agenda.html">
-                    <img src="icones/icone voltar 7.png">
+                    <img src="icones/seta.png"alt="figmes" height="45" width="45">
                 </a>
             </header>
             <main>
@@ -28,7 +28,7 @@
                     <li class="border-vermelho">
                         <a href="tela_Jose.html"> 12:00 - Corte José</a>
                     </li>
-                    <li class="border-azul">
+                    <li class="border-branco">
                         <a href="tela_Luciana.html">14:00 - Manicure Luciana</a>
                     </li>
                 </ul>
