--- a/tela_planodecortes.html
+++ b/tela_planodecortes.html
@@ -20,15 +20,15 @@
                     Plano de Cortes
                 </h1>
                 <a class="voltar" href="tela_meusplanos.html">
-                    <img src="icones/icone voltar 7.png">
+                    <img src="icones/seta.png"alt="figmes" height="45" width="45">
                 </a>
             </header>
             <main>
                 <ul class="block">
-                    <li class="border-azul">
+                    <li class="border-vermelho">
                         <a href="tela_vizualizarplano.html">Vizualizar Plano</a>
                     </li>
-                    <li class="border-vermelho">
+                    <li class="border-branco">
                         <a href="tela_acompanharplano.html">Acompanhar o andamento dos meus clientes</a>
                     </li>
                 </ul>
