--- a/tela_vizualizarplano.html
+++ b/tela_vizualizarplano.html
@@ -22,7 +22,7 @@
                     Plano Atual
                 </h1>
                 <a class="voltar" href="tela_planodecortes.html">
-                    <img src="icones/icone voltar 7.png">
+                    <img src="icones/seta.png"alt="figmes" height="45" width="45">
                 </a>
             </header>
             <main>
