--- a/tela_darfeedback.html
+++ b/tela_darfeedback.html
@@ -26,13 +26,13 @@
             <main>
                 <ul class="coluna_meio">
                     <ul class="text-block">
-                        <li>
+                        <li class="underline">
                             <a href="tela_alice.html">Alice(Feedback Pendente)</a>
                         </li>
-                        <li>
+                        <li class="underline">
                             <a href="tela_claudia.html">Claudia(Feedback Pendente)</a>
                         </li>
-                        <li>
+                        <li class="underline">
                             <a href="tela_joana.html">Joana(Feedback Pendente)</a>
                         </li>
                         <li>Márcio(Feedback Concluído)</li>
