--- a/tela_hoje.html
+++ b/tela_hoje.html
@@ -12,7 +12,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@500&display=swap" rel="stylesheet">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@500&family=Poppins:wght@300&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
         </head>
         <body>
             <header>
@@ -25,10 +25,10 @@
             </header>
             <main>
                 <ul class="block">
-                    <li class="border-marinho">
+                    <li class="border-azulclaro">
                         <a href="tela_Jose.html"> 12:00 - Corte José</a>
                     </li>
-                    <li class="border-branco">
+                    <li class="border-marinho">
                         <a href="tela_Luciana.html">14:00 - Manicure Luciana</a>
                     </li>
                 </ul>
