--- a/tela_meusplanos.html
+++ b/tela_meusplanos.html
@@ -12,7 +12,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@500&display=swap" rel="stylesheet">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
         </head>
         <body>
             <header>
@@ -25,7 +25,7 @@
             </header>
             <main>
                 <ul class="block">
-                    <li class="border-vermelho">
+                    <li class="border-azulclaro">
                         <a href="tela_planodecortes.html">
                         Plano de Cortes
                         </a>
