mudando os icones

--- a/fluxos de tela.html
+++ b/fluxos de tela.html
@@ -39,7 +39,7 @@
                     <li class="border-azul">
                         <a href="tela_relações.html">
                             <ul class="linha">
-                                <li class="agenda"><img src="icones/mesa.png"alt="figmes" height="60" width="60"></li>
+                                <li class="agenda"><img src="icones/relacao.png"alt="figmes" height="60" width="60"></li>
                                 <li>Relações</li>
                             </ul>
                         </a>
