--- a/tela_agenda.html
+++ b/tela_agenda.html
@@ -34,6 +34,9 @@
                     <li class = "border-branco">
                         <a href="tela_mes.html">Mês</a>
                     </li>
+                    <li class = "border-vermelho">
+                        <a href="tela_novoevento.html">Novo Evento</a>
+                    </li>
                 </ul>
             </main>
         </body>
