--- a/tela_acompanharplano.html
+++ b/tela_acompanharplano.html
@@ -18,7 +18,7 @@
         <body>
             <header>
                 <h1>
-                    Acompanhar o andamento dos meus clientes
+                    Clientes
                 </h1>
                 <a class="voltar" href="tela_planodecortes.html">
                     <img src="icones/seta.png"alt="figmes" height="45" width="45">
