--- a/tela_alice.html
+++ b/tela_alice.html
@@ -17,7 +17,7 @@
         <body>
             <header>
                 <h1>
-                    Feedback para a Alice
+                    FB para a Alice
                 </h1>
                 <a class="voltar" href="tela_darfeedback.html">
                     <img src="icones/seta.png"alt="figmes" height="45" width="45">
