--- a/tela_semana.html
+++ b/tela_semana.html
@@ -26,7 +26,9 @@
             <main>
                 <ul class="coluna_meio">
                     <li>
-                        <figure><img src="agenda.png" alt="figsemana"></figure>
+                        <figure class = "agenda">
+                            <img src="agenda.png" alt="figsemana">
+                        </figure>
                     </li>
                 </ul>
             </main>
