--- a/tela_agenda.html
+++ b/tela_agenda.html
@@ -19,8 +19,11 @@
                 <h1>
                     Agenda
                 </h1>
-                <a class="voltar" href="fluxos de tela.html">
+                <a class="voltar" href="index.html">
                     <img src="icones/seta.png"alt="figmes" height="45" width="45">
+                </a>
+                <a class="adicionar button" href="tela_novoevento.html">
+                    <img src="icones/icone_mais.png"alt="figmes" height="45" width="45">
                 </a>
             </header>
             <main>
@@ -33,9 +36,6 @@
                     </li>
                     <li class = "border-branco">
                         <a href="tela_mes.html">Mês</a>
-                    </li>
-                    <li class = "border-vermelho">
-                        <a href="tela_novoevento.html">Novo Evento</a>
                     </li>
                 </ul>
             </main>
