--- a/tela_relações.html
+++ b/tela_relações.html
@@ -19,7 +19,7 @@
                 <h1>
                     Relações
                 </h1>
-                <a class="voltar" href="fluxos de tela.html">
+                <a class="voltar" href="index.html">
                     <img src="icones/seta.png"alt="figmes" height="45" width="45">
                 </a>
             </header>
